--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "bjj-classifier"
 version = "1.0.0"
 description = "BJJ technique classifier API"
 authors = [{name = "BJJ Classifier Team"}]
-requires-python = ">=3.8"
+requires-python = ">=3.10.18"
 dependencies = [
     "fastapi>=0.104.0",
     "pydantic>=2.5.0",
@@ -27,3 +27,6 @@ dev = [
     "isort>=5.12.0",
     "flake8>=6.0.0",
 ]
+
+[tool.poetry]
+package-mode = false
